# FlameberryEngine

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  imgui.ini
FlameEditor/: CMakeLists.txt
FlameEditor/assets/scenes/: scene.berry
FlameEditor/src/: EditorLayer.cpp  EditorLayer.h  FlameEditorApp.cpp  FlameEditorApp.h  PropertiesPanel.cpp  PropertiesPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  Utils.cpp  Utils.h  project.h  project_globals.h
FlameEditor/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  Panel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Flameberry/: CMakeLists.txt
Flameberry/Config/Layouts/: BaseEditorLayout.ini
Flameberry/Shaders/: CMakeLists.txt
Flameberry/Shaders/Misc/Misc/: Font.glsl  TexturedQuad.glsl
Flameberry/Shaders/Vulkan/: BRDFLUT.comp  Flameberry_SkyMap.vert  HDRToCubemap.comp  InfiniteGrid.frag  InfiniteGrid.vert  IrradianceMap.comp  MousePicking2D.frag  MousePicking2D.vert  PBR.frag  PBR.vert  PrefilteredMap.comp  Quad.frag  Quad.vert  SkyMap.frag  Skymap.vert  Text.frag  Text.vert  composite.vert
Flameberry/Shaders/Vulkan/Compiled/: BRDFLUT.comp.spv  Flameberry_Quad.vert.spv  InfiniteGrid.frag.spv  InfiniteGrid.vert.spv  IrradianceMap.comp.spv  MousePicking.vert.spv  MousePicking2D.vert.spv  PBR.frag.spv  SkyMap.vert.spv  (+4 more)
Flameberry/Source/: CMakeLists.txt
Flameberry/Source/Developer/: CMakeLists.txt  Flameberry.h
Flameberry/Source/Editor/: CMakeLists.txt  EditorLayer.cpp  FlameberryEditor.cpp  UI.cpp
Flameberry/assets/shaders/: Circle.glsl  Default.glsl  Font.glsl  Quad.glsl  Skybox.glsl
Flameberry/shaders/: Circle.glsl  Default.glsl
Flameberry/shaders/vulkan/: Flameberry_GenBRDFLUT.comp  Flameberry_GenCubemap.comp  Flameberry_GenIrradianceMap.comp  Flameberry_GenPrefilteredMap.comp  Flameberry_PBR.frag  Flameberry_Quad.frag  Flameberry_SkyMap.frag  HDRToCubemap.comp  PBR.frag  PBRStatic.frag  PrefilteredMap.comp  composite.frag  mesh.frag  mesh.vert  shadowMapping.vert
Flameberry/src/: Application.cpp  Application.h  Flameberry.h  Log.h  Test.cpp  Test.h
Flameberry/src/Asset/: Asset.h  AssetLoader.cpp  AssetLoader.h  AssetManager.h  MaterialLoader.cpp  MaterialLoader.h  MeshLoader.cpp  MeshLoader.h  SkymapLoader.cpp  SkymapLoader.h  TextureLoader.cpp  TextureLoader.h
Flameberry/src/AssetManager/: AssetManager.h
Flameberry/src/Core/: Algorithm.cpp  Algorithm.h  Application.cpp  Application.h  Core.h  EntryPoint.h  Event.h  FileHandler.cpp  FileHandler.h  Input.cpp  Input.h  KeyCodes.h  Log.cpp  Log.h  Math.cpp  Math.h  PatternMatching.cpp  PatternMatching.h  PlatformDetection.h  Profiler.h  Timer.cpp  Timer.h  UUID.cpp  UUID.h  Window.cpp  Window.h  YamlUtils.cpp  YamlUtils.h  optional.h  sparse_set.cpp  sparse_set.h
Flameberry/src/ECS/: Actor.h  Component.h  ComponentPool.cpp  ComponentPool.h  Components.h  Entity.h  Registry.cpp  Registry.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h  SceneView.cpp  SceneView.h  ecs.cpp  ecs.hpp  pool.cpp  pool.h
Flameberry/src/ImGui/: FlameEditor.cpp  FlameEditor.h  ImGuiLayer.cpp  ImGuiLayer.h  imgui.ini
Flameberry/src/Physics/: Physics.cpp  Physics.h  PhysicsEngine.cpp  PhysicsEngine.h
Flameberry/src/Platform/: CustomTitleBar.h  CustomTitleBar.mm  FileDialog.h  FileDialog.mm  PlatformUtils.h  Utils.h  Utils.mm
Flameberry/src/Project/: Project.cpp  Project.h
Flameberry/src/Renderer/: AABB.h  Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  DescriptorSet.cpp  DescriptorSet.h  EditorCameraController.cpp  EditorCameraController.h  Framebuffer.cpp  Framebuffer.h  Frustum.cpp  Frustum.h  GenericCamera.cpp  GenericCamera.h  Image.cpp  Image.h  Light.h  Material.cpp  Material.h  MaterialAsset.cpp  MaterialAsset.h  Mesh.cpp  Mesh.h  Model.h  ModelLoader.cpp  ModelLoader.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Pipeline.cpp  Pipeline.h  RenderCommand.cpp  RenderCommand.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  (+34 more)
Flameberry/src/Scripting/: NativeHost.cpp  NativeHost.h  ScriptEngine.cpp  ScriptEngine.h
Flameberry/src/core/: Application.cpp  Application.h  Core.h  Input.cpp  Input.h  Log.cpp  Log.h  Window.cpp  Window.h
Flameberry/src/flamelogger/: Logger.cpp  Logger.h  flamelogger.cpp  flamelogger.h
Flameberry/src/renderer/: Framebuffer.cpp  Framebuffer.h  OrthographicCamera.cpp  OrthographicCamera.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h
FlameberryEditor/: CMakeLists.txt
FlameberryEditor/GlobalConfig/: ProjectRegistry.fbreg
FlameberryEditor/icons/: camera_icon.vectornator  mtl_file_icon.vectornator
FlameberryEditor/src/: EditorLayer.cpp  EditorLayer.h  FlameEditorApp.cpp  FlameberryEditor.cpp  FlameberryEditor.h  LauncherLayer.cpp  LauncherLayer.h  UI.cpp  UI.h  Utils.cpp  Utils.h  project.cpp
FlameberryEditor/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  EnvironmentSettingsPanel.cpp  EnvironmentSettingsPanel.h  InspectorPanel.cpp  InspectorPanel.h  MaterialEditorPanel.cpp  MaterialEditorPanel.h  MaterialSelectorPanel.cpp  MaterialSelectorPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  ThumbnailCache.cpp  ThumbnailCache.h
FlameberryEditor/src/Project/: Project.cpp  Project.h
SandboxApp/: CMakeLists.txt
SandboxApp/Assets/Materials/: BeatenDownBrick.fbmat  BricksMortar.fbmat  NewMaterial.fbmat  SpaceCruiser.fbmat  Test.fbmat  WhispyGrass.fbmat
SandboxApp/Assets/Meshes/: CubesFalling.mtl  Donut.mtl  PalmTree.mtl
SandboxApp/Assets/Scenes/: CoolMaterials.berry  CubeOnPlatform.berry  CubesFallingScene.berry  NativeScript.berry  Physics.berry  ShadowTesting.berry  test_format.berry
SandboxApp/Assets/scenes/: new_format.berry  submesh.berry
SandboxApp/assets/models/: only_bugatti.mtl  only_bugatti_v2.mtl  sponza.mtl
SandboxApp/assets/scenes/: basic.berry  new.json  plain_scene.json  save_scene.json  scene.json  serialized_scene.json  some_scene.json  world.berry  world_mod.berry
SandboxApp/src/: SandboxApp.cpp  SandboxApp.h
(+320 files in other folders)
